--- a/_posts/2016-08-30-gsoc-2016.md
+++ b/_posts/2016-08-30-gsoc-2016.md
@@ -1,10 +1,13 @@
 ---
-layout: page
+layout: post
 title: GSOC '16
+categories: blog
 comments: true
+excerpt_separator:  <!--more-->
 ---
 
 In this course of GSOC I did many changes in the [Zulip-Android Project](https://github.com/zulip/zulip-android)
+<!--more-->
 
 *   Changed the UI of the app
 *   Changed the login flow of the app, now this shows all the possible backends for any server.
