Added new posts - projects, talks

--- a/_posts/2016-08-30-gsoc-2016.md
+++ b/_posts/2016-08-30-gsoc-2016.md
@@ -6,8 +6,11 @@ comments: true
 excerpt_separator:  <!--more-->
 ---
 
-In this course of GSOC I did many changes in the [Zulip-Android Project](https://github.com/zulip/zulip-android)
+Brief report of my work in GSOC 2016
+
 <!--more-->
+
+In this course of GSOC I did many changes in the [Zulip-Android Project](https://github.com/zulip/zulip-android)
 
 *   Changed the UI of the app
 *   Changed the login flow of the app, now this shows all the possible backends for any server.
