--- a/_posts/2017-08-30-gsoc-17.md
+++ b/_posts/2017-08-30-gsoc-17.md
@@ -1,9 +1,14 @@
 ---
 layout: page
 title: GSOC '17
+categories: blog
+excerpt_separator:  <!--more-->
 sidebar_link: true
 ---
 
+Brief report of my work in GSOC 2017
+
+<!--more-->
 
 # Google summer of code '17: Report
 
