Fix title git talk

--- a/_posts/2017-09-13-git-talk.md
+++ b/_posts/2017-09-13-git-talk.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Talk on World of open source
+title: Tutorial on using git 
 categories: blog
 comments: true
 excerpt_separator:  <!--more-->
