Fix small bugs:

--- a/_posts/2018-01-22-gsoc-talk.md
+++ b/_posts/2018-01-22-gsoc-talk.md
@@ -1,7 +1,5 @@
 ---
 title: GSOC Talk
----
-
 layout: post
 title: Open source talk
 categories: blog
@@ -185,5 +183,5 @@ On a serious note you’ll learn
 
 ----------
 
-![Link to my proposal (1)](https://github.com/kunall17/kunall17.github.io/raw/master/assets/adding-new-templates.pdf)
-![Link to my proposal (2)](https://github.com/kunall17/kunall17.github.io/raw/master/assets/student-management-system.pdf)
+[Link to my proposal (1)](https://github.com/kunall17/kunall17.github.io/raw/master/assets/adding-new-templates.pdf)
+[Link to my proposal (2)](https://github.com/kunall17/kunall17.github.io/raw/master/assets/student-management-system.pdf)
